Change background to size cover to prevent aspect ratio distortion on zoom

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('/cover.png');
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   z-index: -1;
